--- a/__NAME__.Web/Content/less/bootstrap.less
+++ b/__NAME__.Web/Content/less/bootstrap.less
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.3.1
+ * Bootstrap v2.3.2
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -27,8 +27,8 @@
 @import "tables.less";
 
 // Components: common
-//@import "sprites.less";
 @import "font-awesome.less";
+@import "sprites.less";
 @import "dropdowns.less";
 @import "wells.less";
 @import "component-animations.less";
