--- a/__NAME__.Web/Content/less/font-awesome.less
+++ b/__NAME__.Web/Content/less/font-awesome.less
@@ -1,47 +1,92 @@
 /*!
- *  Font Awesome 3.0.2
- *  the iconic font designed for use with Twitter Bootstrap
+ *  Font Awesome 3.1.0
+ *  the iconic font designed for Bootstrap
  *  -------------------------------------------------------
  *  The full suite of pictographic icons, examples, and documentation
- *  can be found at: http://fortawesome.github.com/Font-Awesome/
+ *  can be found at: http://fontawesome.io
  *
  *  License
  *  -------------------------------------------------------
- *  - The Font Awesome font is licensed under the SIL Open Font License - http://scripts.sil.org/OFL
+ *  - The Font Awesome font is licensed under the SIL Open Font License v1.1 -
+ *    http://scripts.sil.org/OFL
  *  - Font Awesome CSS, LESS, and SASS files are licensed under the MIT License -
  *    http://opensource.org/licenses/mit-license.html
- *  - The Font Awesome pictograms are licensed under the CC BY 3.0 License - http://creativecommons.org/licenses/by/3.0/
+ *  - Font Awesome documentation licensed under CC BY 3.0 License -
+ *    http://creativecommons.org/licenses/by/3.0/
  *  - Attribution is no longer required in Font Awesome 3.0, but much appreciated:
- *    "Font Awesome by Dave Gandy - http://fortawesome.github.com/Font-Awesome"
+ *    "Font Awesome by Dave Gandy - http://fontawesome.io"
 
  *  Contact
  *  -------------------------------------------------------
- *  Email: dave@davegandy.com
+ *  Email: dave@fontawesome.io
  *  Twitter: http://twitter.com/fortaweso_me
  *  Work: Lead Product Designer @ http://kyruus.com
  */
 
-@FontAwesomePath:   "/Content/font";
-@borderColor:       #eee;
-@iconMuted:         #eee;
-.border-radius(@radius) { -webkit-border-radius: @radius; -moz-border-radius: @radius; border-radius: @radius; }
+// Variables
+// --------------------------
+
+@FontAwesomePath:    "/content/font";
+@FontAwesomeVersion: "3.1.0";
+@borderColor:        #eee;
+@iconMuted:          #eee;
+@iconLight:          #fff;
+@iconDark:           #333;
+
+// Mixins
+// --------------------------
+
+.border-radius(@radius) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  border-radius: @radius;
+}
+
+.icon-stack(@width: 2em, @height: 2em, @top-font-size: 1em, @base-font-size: 2em) {
+  .icon-stack {
+    position: relative;
+    display: inline-block;
+    width: @width;
+    height: @height;
+    line-height: @width;
+    vertical-align: -35%;
+    [class^="icon-"],
+    [class*=" icon-"] {
+      display: block;
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      font-size: @top-font-size;
+      line-height: inherit;
+      *line-height: @height;
+    }
+    .icon-stack-base {
+      font-size: @base-font-size;
+      *line-height: @height / @base-font-size;
+    }
+  }
+}
+
+/* FONT PATH
+ * -------------------------- */
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?v=3.0.1');
-  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'),
-    url('@{FontAwesomePath}/fontawesome-webfont.woff?v=3.0.1') format('woff'),
-    url('@{FontAwesomePath}/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
-//    url('@{FontAwesomePath}/fontawesome-webfont.svg#fontawesomeregular?v=3.0.1') format('svg');
-
-//  src: url('@{FontAwesomePath}/FontAwesome.otf') format('opentype');
+  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?v=@{FontAwesomeVersion}');
+  src: url('@{FontAwesomePath}/fontawesome-webfont.eot?#iefix&v=@{FontAwesomeVersion}') format('embedded-opentype'),
+    url('@{FontAwesomePath}/fontawesome-webfont.woff?v=@{FontAwesomeVersion}') format('woff'),
+    url('@{FontAwesomePath}/fontawesome-webfont.ttf?v=@{FontAwesomeVersion}') format('truetype'),
+    url('@{FontAwesomePath}/fontawesome-webfont.svg#fontawesomeregular?v=@{FontAwesomeVersion}') format('svg');
+//  src: url('@{FontAwesomePath}/FontAwesome.otf') format('opentype'); // used when developing fonts
 
   font-weight: normal;
   font-style: normal;
 }
 
-/*  Font Awesome styles
-    ------------------------------------------------------- */
+/* FONT AWESOME CORE
+ * -------------------------- */
+
 [class^="icon-"],
 [class*=" icon-"] {
   font-family: FontAwesome;
@@ -49,34 +94,7 @@
   font-style: normal;
   text-decoration: inherit;
   -webkit-font-smoothing: antialiased;
-
-/* sprites.less reset */
-  display: inline;
-  width: auto;
-  height: auto;
-  line-height: normal;
-  vertical-align: baseline;
-  background-image: none;
-  background-position: 0% 0%;
-  background-repeat: repeat;
-  margin-top: 0;
-}
-
-/* more sprites.less reset */
-.icon-white,
-.nav-pills > .active > a > [class^="icon-"],
-.nav-pills > .active > a > [class*=" icon-"],
-.nav-list > .active > a > [class^="icon-"],
-.nav-list > .active > a > [class*=" icon-"],
-.navbar-inverse .nav > .active > a > [class^="icon-"],
-.navbar-inverse .nav > .active > a > [class*=" icon-"],
-.dropdown-menu > li > a:hover > [class^="icon-"],
-.dropdown-menu > li > a:hover > [class*=" icon-"],
-.dropdown-menu > .active > a > [class^="icon-"],
-.dropdown-menu > .active > a > [class*=" icon-"],
-.dropdown-submenu:hover > a > [class^="icon-"],
-.dropdown-submenu:hover > a > [class*=" icon-"] {
-  background-image: none;
+  *margin-right: .3em; // fixes ie7 issues
 }
 
 [class^="icon-"]:before,
@@ -86,66 +104,58 @@
   speak: none;
 }
 
-/* makes sure icons active on rollover in links */
-a {
-  [class^="icon-"],
-  [class*=" icon-"] {
-    display: inline-block;
-  }
-}
-
 /* makes the font 33% larger relative to the icon container */
 .icon-large:before {
   vertical-align: -10%;
   font-size: 4/3em;
 }
 
-.btn, .nav {
+/* makes sure icons active on rollover in links */
+a {
   [class^="icon-"],
   [class*=" icon-"] {
-    display: inline;
-    /* keeps button heights with and without icons the same */
-    &.icon-large { line-height: .9em; }
-    &.icon-spin { display: inline-block; }
+    &, &:before { display: inline; }
   }
 }
 
-.nav-tabs, .nav-pills {
-  [class^="icon-"],
-  [class*=" icon-"] {
-  /* keeps button heights with and without icons the same */
-    &, &.icon-large { line-height: .9em; }
-  }
-}
-
-li, .nav li {
-  [class^="icon-"],
-  [class*=" icon-"] {
+/* increased font size for icon-large */
+[class^="icon-"],
+[class*=" icon-"] {
+  &.icon-fixed-width {
     display: inline-block;
-    width: 1.25em;
+    width: 18/14em;
     text-align: center;
     &.icon-large {
-      /* increased font size for icon-large */
-      width: 1.25*1.25em;
+      width: 22/14em;
     }
   }
 }
 
-ul.icons {
+ul.icons-ul {
   list-style-type: none;
-  text-indent: -.75em;
+  text-indent: -10/14em;
+  margin-left: 30/14em;
 
-  li {
-    [class^="icon-"],
-    [class*=" icon-"] {
-      width: .75em;
+  > li {
+    .icon-li {
+      width: 10/14em;
+      display: inline-block;
+      text-align: center;
     }
   }
 }
 
-.icon-muted {
-  color: @iconMuted;
+// allows usage of the hide class directly on font awesome icons
+[class^="icon-"],
+[class*=" icon-"] {
+  &.hide {
+    display: none;
+  }
 }
+
+.icon-muted { color: @iconMuted; }
+.icon-light { color: @iconLight; }
+.icon-dark { color: @iconDark; }
 
 // Icon Borders
 // -------------------------
@@ -181,7 +191,16 @@ ul.icons {
   }
 }
 
-// Floats
+.icon-5x {
+  font-size: 5em;
+  &.icon-border {
+    border-width: 5px;
+    .border-radius(7px);
+  }
+}
+
+
+// Floats & Margins
 // -------------------------
 
 // Quick floats
@@ -198,6 +217,56 @@ ul.icons {
   }
 }
 
+/* BOOTSTRAP SPECIFIC CLASSES
+ * -------------------------- */
+
+/* Bootstrap 2.0 sprites.less reset */
+[class^="icon-"],
+[class*=" icon-"] {
+  display: inline;
+  width: auto;
+  height: auto;
+  line-height: normal;
+  vertical-align: baseline;
+  background-image: none;
+  background-position: 0% 0%;
+  background-repeat: repeat;
+  margin-top: 0;
+}
+
+/* more sprites.less reset */
+.icon-white,
+.nav-pills > .active > a > [class^="icon-"],
+.nav-pills > .active > a > [class*=" icon-"],
+.nav-list > .active > a > [class^="icon-"],
+.nav-list > .active > a > [class*=" icon-"],
+.navbar-inverse .nav > .active > a > [class^="icon-"],
+.navbar-inverse .nav > .active > a > [class*=" icon-"],
+.dropdown-menu > li > a:hover > [class^="icon-"],
+.dropdown-menu > li > a:hover > [class*=" icon-"],
+.dropdown-menu > .active > a > [class^="icon-"],
+.dropdown-menu > .active > a > [class*=" icon-"],
+.dropdown-submenu:hover > a > [class^="icon-"],
+.dropdown-submenu:hover > a > [class*=" icon-"] {
+  background-image: none;
+}
+
+
+/* keeps Bootstrap styles with and without icons the same */
+.btn, .nav {
+  [class^="icon-"],
+  [class*=" icon-"] {
+//    display: inline;
+    &.icon-large { line-height: .9em; }
+    &.icon-spin { display: inline-block; }
+  }
+}
+.nav-tabs, .nav-pills {
+  [class^="icon-"],
+  [class*=" icon-"] {
+    &, &.icon-large { line-height: .9em; }
+  }
+}
 .btn {
   [class^="icon-"],
   [class*=" icon-"] {
@@ -207,7 +276,6 @@ ul.icons {
     &.icon-spin.icon-large { line-height: .8em; }
   }
 }
-
 .btn.btn-small {
   [class^="icon-"],
   [class*=" icon-"] {
@@ -216,7 +284,6 @@ ul.icons {
     }
   }
 }
-
 .btn.btn-large {
   [class^="icon-"],
   [class*=" icon-"] {
@@ -229,7 +296,13 @@ ul.icons {
   }
 }
 
+/* EXTRAS
+ * -------------------------- */
 
+/* Stacked and layered icon */
+.icon-stack();
+
+/* Animated rotating icon */
 .icon-spin {
   display: inline-block;
   -moz-animation: spin 2s infinite linear;
@@ -259,15 +332,52 @@ ul.icons {
   100% { transform: rotate(359deg); }
 }
 
-@-moz-document url-prefix() {
-  .icon-spin { height: .9em; }
-  .btn .icon-spin { height: auto; }
-  .icon-spin.icon-large { height: 1.25em; }
-  .btn .icon-spin.icon-large { height: .75em; }
+/* Icon rotations and mirroring */
+.icon-rotate-90:before{
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 
-/*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
-    readers do not read off random characters that represent icons */
+.icon-rotate-180:before{
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+}
+
+.icon-rotate-270:before{
+  -webkit-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
+.icon-flip-horizontal:before {
+  -webkit-transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+}
+
+.icon-flip-vertical:before {
+  -webkit-transform: scale(1, -1);
+  -moz-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  transform: scale(1, -1);
+}
+
+/* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
+   readers do not read off random characters that represent icons */
 .icon-glass:before                { content: "\f000"; }
 .icon-music:before                { content: "\f001"; }
 .icon-search:before               { content: "\f002"; }
@@ -298,9 +408,10 @@ ul.icons {
 .icon-upload:before               { content: "\f01b"; }
 .icon-inbox:before                { content: "\f01c"; }
 .icon-play-circle:before          { content: "\f01d"; }
-.icon-repeat:before               { content: "\f01e"; }
+.icon-repeat:before,
+.icon-rotate-right:before         { content: "\f01e"; }
 
-/* \f020 doesn't work in Safari. all shifted one down */
+/* F020 doesn't work in Safari. all shifted one down */
 .icon-refresh:before              { content: "\f021"; }
 .icon-list-alt:before             { content: "\f022"; }
 .icon-lock:before                 { content: "\f023"; }
@@ -369,7 +480,8 @@ ul.icons {
 .icon-arrow-right:before          { content: "\f061"; }
 .icon-arrow-up:before             { content: "\f062"; }
 .icon-arrow-down:before           { content: "\f063"; }
-.icon-share-alt:before            { content: "\f064"; }
+.icon-share-alt:before,
+.icon-mail-forward:before         { content: "\f064"; }
 .icon-resize-full:before          { content: "\f065"; }
 .icon-resize-small:before         { content: "\f066"; }
 .icon-plus:before                 { content: "\f067"; }
@@ -483,7 +595,8 @@ ul.icons {
 
 .icon-envelope-alt:before         { content: "\f0e0"; }
 .icon-linkedin:before             { content: "\f0e1"; }
-.icon-undo:before                 { content: "\f0e2"; }
+.icon-undo:before,
+.icon-rotate-left:before          { content: "\f0e2"; }
 .icon-legal:before                { content: "\f0e3"; }
 .icon-dashboard:before            { content: "\f0e4"; }
 .icon-comment-alt:before          { content: "\f0e5"; }
@@ -531,7 +644,69 @@ ul.icons {
 
 .icon-spinner:before              { content: "\f110"; }
 .icon-circle:before               { content: "\f111"; }
-.icon-reply:before                { content: "\f112"; }
-.icon-github-alt:before           { content: "\f113"; }
+.icon-reply:before,
+.icon-mail-reply:before           { content: "\f112"; }
 .icon-folder-close-alt:before     { content: "\f114"; }
 .icon-folder-open-alt:before      { content: "\f115"; }
+.icon-expand-alt:before           { content: "\f116"; }
+.icon-collapse-alt:before         { content: "\f117"; }
+.icon-smile:before                { content: "\f118"; }
+.icon-frown:before                { content: "\f119"; }
+.icon-meh:before                  { content: "\f11a"; }
+.icon-gamepad:before              { content: "\f11b"; }
+.icon-keyboard:before             { content: "\f11c"; }
+.icon-flag-alt:before             { content: "\f11d"; }
+.icon-flag-checkered:before       { content: "\f11e"; }
+
+.icon-terminal:before             { content: "\f120"; }
+.icon-code:before                 { content: "\f121"; }
+.icon-reply-all:before,           { content: "\f122"; }
+.icon-mail-reply-all:before       { content: "\f122"; }
+.icon-star-half-full:before,
+.icon-star-half-empty:before      { content: "\f123"; }
+.icon-location-arrow:before       { content: "\f124"; }
+.icon-crop:before                 { content: "\f125"; }
+.icon-code-fork:before            { content: "\f126"; }
+.icon-unlink:before               { content: "\f127"; }
+.icon-question:before             { content: "\f128"; }
+.icon-info:before                 { content: "\f129"; }
+.icon-exclamation:before          { content: "\f12a"; }
+.icon-superscript:before          { content: "\f12b"; }
+.icon-subscript:before            { content: "\f12c"; }
+.icon-eraser:before               { content: "\f12d"; }
+.icon-puzzle-piece:before         { content: "\f12e"; }
+
+.icon-microphone:before           { content: "\f130"; }
+.icon-microphone-off:before       { content: "\f131"; }
+.icon-shield:before               { content: "\f132"; }
+.icon-calendar-empty:before       { content: "\f133"; }
+.icon-fire-extinguisher:before    { content: "\f134"; }
+.icon-rocket:before               { content: "\f135"; }
+.icon-maxcdn:before               { content: "\f136"; }
+.icon-chevron-sign-left:before    { content: "\f137"; }
+.icon-chevron-sign-right:before   { content: "\f138"; }
+.icon-chevron-sign-up:before      { content: "\f139"; }
+.icon-chevron-sign-down:before    { content: "\f13a"; }
+.icon-html5:before                { content: "\f13b"; }
+.icon-css3:before                 { content: "\f13c"; }
+.icon-anchor:before               { content: "\f13d"; }
+.icon-unlock-alt:before           { content: "\f13e"; }
+
+.icon-bullseye:before             { content: "\f140"; }
+.icon-ellipsis-horizontal:before  { content: "\f141"; }
+.icon-ellipsis-vertical:before    { content: "\f142"; }
+.icon-rss-sign:before             { content: "\f143"; }
+.icon-play-sign:before            { content: "\f144"; }
+.icon-ticket:before               { content: "\f145"; }
+.icon-minus-sign-alt:before       { content: "\f146"; }
+.icon-check-minus:before          { content: "\f147"; }
+.icon-level-up:before             { content: "\f148"; }
+.icon-level-down:before           { content: "\f149"; }
+.icon-check-sign:before           { content: "\f14a"; }
+.icon-edit-sign:before            { content: "\f14b"; }
+.icon-external-link-sign:before   { content: "\f14c"; }
+.icon-share-sign:before           { content: "\f14d"; }
+
+
+
+
