--- a/__NAME__.Web/Views/Shared/_Layout.cshtml
+++ b/__NAME__.Web/Views/Shared/_Layout.cshtml
@@ -10,8 +10,10 @@
         <meta name="author" content="">
 
         <!-- Le styles -->
-        @this.TimeScript("Bootstrap",
-            @<link href="@Url.Content("../../Content/less/bootstrap.css")" rel="stylesheet" />)
+        @this.TimeScript("Bootstrap 2.3.2",
+            @<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet" />)
+        @this.TimeScript("Font Awesome",
+            @<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet" />)
         <style type="text/css">
             body {
                 padding-top: 20px;
@@ -49,7 +51,6 @@
                 margin-top: 28px;
             }
         </style>
-        @*<link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">*@
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -94,13 +95,13 @@
             ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         @this.TimeScript("jQuery",
-            @<script src="@Url.Content("../Scripts/jquery.js")"></script>)
+            @<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>)
         @this.TimeScript("jQuery PJAX",
-            @<script src="@Url.Content("../Scripts/jquery.pjax.js")"></script>)
+            @<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.pjax/1.7.0/jquery.pjax.min.js"></script>)
         @this.TimeScript("Bootstrap JS",
-            @<script src="@Url.Content("../Scripts/bootstrap.js")"></script>)
-        @this.TimeScript("App.js",
-            @<script src="@Url.Content("../Scripts/App/App.js")"></script>)
+            @<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>)
+        @this.TimeScript("App.less",
+            @<script src="@Url.Content("../Scripts/App/App.coffee")"></script>)
 
         @RenderSection("Scripts", false)
         @MiniProfiler.RenderIncludes()
