--- a/__NAME__.Web/Views/Shared/_Layout.cshtml
+++ b/__NAME__.Web/Views/Shared/_Layout.cshtml
@@ -71,8 +71,8 @@
         <div class="container-narrow">
             <div class="masthead">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#"><i class="icon-home"></i>Home</a></li>
-                    <li><a href="#"><i class="icon-info-sign"></i>About</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "Home")"><i class="icon-home"></i>Home</a></li>
+                    <li><a href="@Url.Action("Index", "About")"><i class="icon-info-sign"></i>About</a></li>
                     <li><a href="#"><i class="icon-envelope"></i>Contact</a></li>
                 </ul>
                 <h3 class="muted"><i class="icon-globe"></i> SpaceX ERP</h3>
